alignment fix

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -27,8 +27,7 @@
   #product__card{
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
-      justify-content: center;
-      align-items: center;
+      justify-items: center;
       gap: 10px;
   }
 
